# SimpleOCR

./: README.md  config.py  denoise_photos_nn.py  io_txt.py  postprocess.py  preprocess.py  pyproject.toml  run.py  text_recognition.py
weights/: image_denoising_model.h5
